--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,22 @@ body{
   border: gray solid 1px;
   border-radius: 20px;
 }
+
+#style-1::-webkit-scrollbar {
+  width: 6px;
+  background-color: #F5F5F5;
+} 
+
+#style-1::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+
+#style-1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+.search-bars {
+  position: -webkit-sticky;
+  position: sticky;
+}
